issues/328 Firefox widget position shifted

--- a/src/less/sniffy.less
+++ b/src/less/sniffy.less
@@ -83,7 +83,7 @@
 
 
 	&.sniffy-widget-maximized .sniffy-widget-icon-container {
-		max-height: 168px;
+		max-height: 174px;
 		
 		-moz-transition: max-height .5s;
     	-ms-transition: max-height .5s;
